# csfuzz

./: .gitmodules  README.md  TTR.cc  build.md  crash_analyze.py  run.md  vul.md
src/: CMakeLists.txt  afl-clang.c  afl-fuzz.c  afl-llvm-rt.o.c  afl-pass.cc  afl-runtime.cc  calldst.json  deal_distance.py  deal_targets.py
src/ff/: Makefile  afl-llvm-pass.so.cc  dyncfg.h  gen_initial_distance.py  main.cpp
src/lib/: config.h
svf/: README.md  svf-ex.cpp
